[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package"
requires-python = ">=3.9"
authors = [{name = "Author", email = "author@email"}]
maintainers = [{name = "Maintainer", email = "maintainer@email"}]
dynamic = ["version", "description"]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = []
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
something = "package.__main__:main"

[project.optional-dependencies]
dev = [
    "flit >=3.2.0,<4",
]
docs = []
hooks = []
test = []
